--- a/apis.yml
+++ b/apis.yml
@@ -1,31 +1,75 @@
 aid: mintlify
-name: Mintlify
-description: >-
-  Meet the next generation of documentation. AI-native, beautiful
-  out-of-the-box, and built for collaboration. 
-type: Index
-position: Consumer
-access: 3rd-Party
-image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-tags:
-  - API
-created: '2026-01-05'
-modified: '2026-01-05'
 url: >-
   https://raw.githubusercontent.com/api-evangelist/mintlify/refs/heads/main/apis.yml
-specificationVersion: '0.19'
 apis:
   - aid: mintlify:mintlify
     name: Mintlify
-    description: >-
-      Meet the next generation of documentation. AI-native, beautiful
-      out-of-the-box, and built for collaboration. 
-    humanURL: ' https://www.mintlify.com/'
     tags:
-      - API
+      - Documentation
+    humanURL: ' https://www.mintlify.com/'
     properties:
-      - type: Documentation
-        url: ' https://www.mintlify.com/'
+      - url: ' https://www.mintlify.com/'
+        type: Documentation
+    description: >-
+      Mintlify is a developer documentation platform that helps product and
+      engineering teams create, maintain, and host modern docs. It uses a
+      docs‑as‑code workflow (Markdown in your repo) with a rich component
+      library and GitHub integration. Mintlify can generate polished API
+      references from OpenAPI/Swagger or Postman, add interactive “Try it”
+      requests and dynamic code samples/SDKs, and includes AI tools (like its
+      Doc Writer) to draft and update docs from your code. It provides fast,
+      branded sites with search, versioning, changelogs, analytics, and
+      collaboration features, so teams can ship documentation as quickly as they
+      ship code.
+name: Mintlify
+tags:
+  - Documentation
+type: Contract
+image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
+access: 3rd-Party
+created: '2026-01-05'
+modified: '2026-01-04'
+position: Consuming
+description: >-
+  Mintlify is an AI-native intelligent documentation platform designed for the
+  next generation of technical documentation, combining beautiful out-of-the-box
+  design with advanced collaboration and AI capabilities. The platform
+  integrates AI throughout the entire documentation lifecycle—from writing and
+  maintenance to how content is understood by both human users and LLMs—with
+  features like a context-aware agent for self-updating knowledge management,
+  intelligent AI assistants that turn documentation visits into guided
+  conversations, and native support for llms.txt and MCP to ensure products
+  appear in AI workflows. 
 maintainers:
   - FN: Kin Lane
     email: info@apievangelist.com
+specificationVersion: '0.19'
+common:
+  - name: Mintlify - The Intelligent Documentation Platform
+    description: 'null'
+    url: https://www.mintlify.com/
+    type: Website
+  - name: Customers - Mintlify
+    description: 'null'
+    url: https://www.mintlify.com/customers
+    type: Customers
+  - name: Blog - Mintlify
+    description: 'null'
+    url: https://www.mintlify.com/blog
+    type: Blog
+  - name: Pricing - Mintlify
+    description: 'null'
+    url: https://www.mintlify.com/pricing
+    type: Pricing
+  - name: Introduction - Mintlify Guides
+    description: 'null'
+    url: https://www.mintlify.com/guides/introduction
+    type: Guide
+  - name: Introduction - Mintlify
+    description: 'null'
+    url: https://www.mintlify.com/docs/api/introduction
+    type: Documentation
+  - name: Product updates - Mintlify
+    description: 'null'
+    url: https://www.mintlify.com/docs/changelog
+    type: ChangeLog
